<resources>
    <string name="app_name">Which Animal Are You</string>
    <string name="key_name">name</string>

    <string name="question1">1. I eat meat</string>
    <string name="question2">2. I like being around other people</string>
    <string name="question3">3. I like to swim</string>
    <string name="question4">4. I sleep a lot</string>
    <string name="question5">5. I stay up late at night</string>
    <string name="question6">6. I feel comfortable during the winter</string>
    <string name="question7">7. I\'m an active person</string>
    <string name="question8">8. I can easily loose my temper</string>
    <string name="button">Submit</string>
    <string name="hello">Hello!</string>
    <string name="answer_8_questions">ANSWER 8 QUESTIONS</string>

    <string-array name="options">
        <item>Always</item>
        <item>Often</item>
        <item>Sometimes</item>
        <item>Rare</item>
        <item>Never</item>
    </string-array>

</resources>
