<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ccff"
    tools:context="com.shaary.whichanimalareyou.ui.WhichAnimalActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/intro"
                style="@style/TextViewStyle"
                android:gravity="center_horizontal"
                android:text="@string/answer_8_questions"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/question1"
                style="@style/TextViewStyle"
                android:text="@string/question1"
                app:layout_constraintTop_toBottomOf="@+id/intro" />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question1" />

            <TextView
                android:id="@+id/question2"
                style="@style/TextViewStyle"
                android:text="@string/question2"
                app:layout_constraintTop_toBottomOf="@+id/spinner1" />

            <Spinner
                android:id="@+id/spinner2"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question2" />

            <TextView
                android:id="@+id/question3"
                style="@style/TextViewStyle"
                android:text="@string/question3"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />

            <Spinner
                android:id="@+id/spinner3"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question3" />

            <TextView
                android:id="@+id/question4"
                style="@style/TextViewStyle"
                android:text="@string/question4"
                app:layout_constraintTop_toBottomOf="@+id/spinner3" />

            <Spinner
                android:id="@+id/spinner4"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question4" />

            <TextView
                android:id="@+id/question5"
                style="@style/TextViewStyle"
                android:text="@string/question5"
                app:layout_constraintTop_toBottomOf="@+id/spinner4" />

            <Spinner
                android:id="@+id/spinner5"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question5" />

            <TextView
                android:id="@+id/question6"
                style="@style/TextViewStyle"
                android:text="@string/question6"
                app:layout_constraintTop_toBottomOf="@+id/spinner5" />

            <Spinner
                android:id="@+id/spinner6"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question6" />

            <TextView
                android:id="@+id/question7"
                style="@style/TextViewStyle"
                android:text="@string/question7"
                app:layout_constraintTop_toBottomOf="@+id/spinner6" />

            <Spinner
                android:id="@+id/spinner7"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question7" />

            <TextView
                android:id="@+id/question8"
                style="@style/TextViewStyle"
                android:text="@string/question8"
                app:layout_constraintTop_toBottomOf="@+id/spinner7" />

            <Spinner
                android:id="@+id/spinner8"
                style="@style/SpinnerStyle"
                app:layout_constraintTop_toBottomOf="@+id/question8" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#e1dcd9"
        android:text="@string/button"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
